# bvbabel

./: README.md  pyproject.toml
bvbabel/: _binary_format.py  fmr.py  glm.py  gtc.py  map.py  msk.py  mtc.py  poi.py  prt.py  roi.py  sdm.py  ssm.py  stc.py  trf.py  v16.py  vmp.py  vmr.py  voi.py  vtc.py
examples/: typed_api_read_fmr.py  typed_api_read_glm.py  typed_api_read_gtc.py  typed_api_read_map.py  typed_api_read_msk.py  typed_api_read_mtc.py  typed_api_read_poi.py  typed_api_read_prt.py  typed_api_read_roi.py  typed_api_read_sdm.py  typed_api_read_ssm.py  typed_api_read_trf.py  typed_api_read_v16.py  typed_api_read_vmp.py  typed_api_read_vmr.py  typed_api_read_voi.py  typed_api_read_vtc.py
